guides/wide-ep-lws/manifests/modelserver/gb200/httproute.yaml
# HTTPRoute for GB200 InferencePool
# Routes all traffic on the GB200 gateway to this InferencePool
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wide-ep-gb200-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: wide-ep-gb200-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: wide-ep-gb200-infpool
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: "0s"
      request: "0s"
